[metadata]
name = neutron-vpnaas
summary = OpenStack Networking VPN as a Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    neutron_vpnaas
data_files =
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/vpnaas.filters

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-vpn-netns-wrapper = neutron_vpnaas.services.vpn.common.netns_wrapper:main
    neutron-vpn-agent = neutron_vpnaas.cmd.eventlet.agent:main
    neutron-vyatta-agent = neutron_vpnaas.cmd.eventlet.vyatta_agent:main
device_drivers =
    neutron.services.vpn.device_drivers.ipsec.OpenSwanDriver = neutron_vpnaas.services.vpn.device_drivers.ipsec:OpenSwanDriver
    neutron.services.vpn.device_drivers.cisco_ipsec.CiscoCsrIPsecDriver = neutron_vpnaas.services.vpn.device_drivers.cisco_ipsec:CiscoCsrIPsecDriver
    neutron.services.vpn.device_drivers.vyatta_ipsec.VyattaIPsecDriver = neutron_vpnaas.services.vpn.device_drivers.vyatta_ipsec:VyattaIPsecDriver
neutron.db.alembic_migrations =
    neutron-vpnaas = neutron_vpnaas.db.migration:alembic_migrations
neutron.service_plugins =
    vpnaas = neutron_vpnaas.services.vpn.plugin:VPNDriverPlugin
    neutron.services.vpn.plugin.VPNDriverPlugin = neutron_vpnaas.services.vpn.plugin:VPNDriverPlugin
oslo.config.opts =
    neutron.vpnaas = neutron_vpnaas.opts:list_opts
    neutron.vpnaas.agent = neutron_vpnaas.opts:list_agent_opts
tempest.test_plugins =
    neutron_vpnaas_tests = neutron_vpnaas.tests.tempest.plugin:VPNTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_vpnaas/locale/neutron_vpnaas.pot

[compile_catalog]
directory = neutron_vpnaas/locale
domain = neutron_vpnaas

[update_catalog]
domain = neutron_vpnaas
output_dir = neutron_vpnaas/locale
input_file = neutron_vpnaas/locale/neutron_vpnaas.pot

[wheel]
universal = 1

[pbr]
warnerrors = true
