[metadata]
name = neutron-vpnaas
summary = OpenStack Networking VPN as a Service
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/neutron-vpnaas/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    neutron_vpnaas
data_files =
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/vpnaas.filters

[entry_points]
console_scripts =
    neutron-vpn-netns-wrapper = neutron_vpnaas.services.vpn.common.netns_wrapper:main
neutron.agent.l3.extensions =
    vpnaas = neutron_vpnaas.services.vpn.agent:L3WithVPNaaS
device_drivers =
    neutron.services.vpn.device_drivers.ipsec.OpenSwanDriver = neutron_vpnaas.services.vpn.device_drivers.ipsec:OpenSwanDriver
neutron.db.alembic_migrations =
    neutron-vpnaas = neutron_vpnaas.db.migration:alembic_migrations
neutron.service_plugins =
    vpnaas = neutron_vpnaas.services.vpn.plugin:VPNDriverPlugin
    neutron.services.vpn.plugin.VPNDriverPlugin = neutron_vpnaas.services.vpn.plugin:VPNDriverPlugin
oslo.config.opts =
    neutron.vpnaas = neutron_vpnaas.opts:list_opts
    neutron.vpnaas.agent = neutron_vpnaas.opts:list_agent_opts
oslo.policy.policies =
    neutron-vpnaas = neutron_vpnaas.policies:list_rules
neutron.policies =
    neutron-vpnaas = neutron_vpnaas.policies:list_rules
